gcc/testsuite/rust/rustc/ui/env-macro/env-escaped-var.rs
fn main() {
    env!("\t"); // { dg-error "" "" { target *-*-* } }
}

